@@ -1,0 +1,25 @@
+-- add the new email column
+-- we need to create a procedure which only alters the participant table if the
+-- the email column does not exist
+DROP PROCEDURE IF EXISTS patch_participant;
+DELIMITER //
+CREATE PROCEDURE patch_participant()
+  BEGIN
+    DECLARE test INT;
+    SET @test = (
+      SELECT COUNT(*)
+      FROM information_schema.COLUMNS
+      WHERE TABLE_SCHEMA = ( SELECT DATABASE() )
+      AND TABLE_NAME = "participant"
+      AND COLUMN_NAME = "email" );
+    IF @test = 0 THEN
+      ALTER TABLE participant
+      ADD COLUMN email VARCHAR(255) NULL
+      AFTER site_id;
+    END IF;
+  END //
+DELIMITER ;
+
+-- now call the procedure and remove the procedure
+CALL patch_participant();
+DROP PROCEDURE IF EXISTS patch_participant;
