@@ -5,3 +5,4 @@ SOURCE role_has_operation.sql
 SOURCE queue.sql
 SOURCE setting_value.sql
 SOURCE setting.sql
+SOURCE participant.sql
