@@ -20,6 +20,9 @@
   - "machine message" and "machine no message" have been combined into the "not reached" queue
   - "always available" has been merged into the "not available" queue
 
+* Adding email address to participant view
+  - This property is synched with the email address in Mastodon
+
 ====================================================================================================
 1.1.6
 ====================================================================================================
